confs/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app-selec
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
