confs/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress-default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
